# rust-clamav-client

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.github/: clamd.conf
.github/workflows/: ci.yml  push.yml  test.yml
clamd/: clamd.conf
clamd/database/: bytecode.cvd
src/: async.rs  async_std.rs  asynch.rs  blocking.rs  lib.rs  nonblocking.rs  smol.rs  tokio.rs
src/async_std/: mod.rs
src/async_std/io/: mod.rs  util.rs
tests/: clamav_client.rs  clamav_client_deprecated.rs  clamd.conf
tests/async_std_util/: io.rs  mod.rs
