[package]
name = "clamav-client"
version = "2.0.0"
edition = "2021"
rust-version = "1.56.0"
authors = ["Thorsten Blum <thorsten.blum@toblux.com>"]
homepage = "https://github.com/toblux/rust-clamav-client"
repository = "https://github.com/toblux/rust-clamav-client"
documentation = "https://docs.rs/clamav-client"
description = "ClamAV client library with optional Tokio and async-std support"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "clamd", "anitvirus", "async", "tokio"]
exclude = ["clamd", ".github"]

[dependencies]
tokio = { version = "1.34.0", default-features = false, features = ["fs", "io-util", "net"], optional = true }
tokio-stream = { version = "0.1.14", default-features = false, optional = true }
async-std = { version = "1.12.0", optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["io-std", "macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"] }
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
tokio = ["dep:tokio"]
tokio-stream = ["tokio", "dep:tokio-stream", "dep:bytes"]
async-std = ["dep:async-std", "dep:bytes"]

[package.metadata.docs.rs]
features = ["tokio", "tokio-stream", "async-std"]
