[package]
name = "clamav-client"
version = "2.0.0"
edition = "2021"
rust-version = "1.72.1"
authors = ["Thorsten Blum <thorsten.blum@toblux.com>"]
homepage = "https://github.com/toblux/rust-clamav-client"
repository = "https://github.com/toblux/rust-clamav-client"
documentation = "https://docs.rs/clamav-client"
description = "ClamAV client library with optional Tokio and async-std support"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "clamd", "anitvirus", "async", "tokio"]
exclude = ["clamd", ".github"]

[dependencies]
bytes = { version = "1", optional = true }
async-net = {version = "2.0.0", optional = true}
futures-lite = {version = "2.5.0", optional = true}
async-fs = {version = "2.1.2", optional = true}
blocking = {version = "1.6.1" }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }

[features]
async = ["dep:bytes", "dep:async-net", "dep:futures-lite", "dep:async-fs", ]
tokio = ["async"]
tokio-stream = ["async"]
async-std = ["async"]


[package.metadata.docs.rs]
features = ["tokio", "tokio-stream", "async-std"]
