[package]
name = "clamav-client"
version = "2.2.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Thorsten Blum <thorsten.blum@toblux.com>"]
homepage = "https://github.com/toblux/rust-clamav-client"
repository = "https://github.com/toblux/rust-clamav-client"
documentation = "https://docs.rs/clamav-client"
description = "ClamAV client library with optional support for async-std, smol, and Tokio"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "clamd", "anitvirus", "smol", "tokio"]
exclude = ["clamd", ".github"]

[dependencies]
tokio = { version = "1.34.0", default-features = false, features = ["fs", "io-util", "net"], optional = true }
tokio-stream = { version = "0.1.14", default-features = false, optional = true }
async-std = { version = "1.12.0", optional = true }
smol = { version = "2.0.2", optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["io-std", "macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"] }
async-std = { version = "1.12.0", features = ["attributes"] }
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"

[features]
tokio = ["dep:tokio"]
tokio-stream = ["tokio", "dep:tokio-stream", "dep:bytes"]
async-std = ["dep:async-std", "dep:bytes"]
smol = ["dep:smol", "dep:bytes"]

[package.metadata.docs.rs]
features = ["tokio", "tokio-stream", "async-std", "smol"]
